<resources>
    <string name="app_name">SchedNote</string>
    <string name="subject_exists">Subject with this abbreviation already exists</string>
    <string name="subject_required_data_missing">Fill in the abbreviation and full name of the subject!</string>
    <string name="subject_abb_missing">Fill in the abbreviation!</string>
    <string name="subject_abb_too_long">Abbreviation is too long!</string>
    <string name="subject_abb_format_warning">Illegal format of the abbreviation!</string>
    <string name="note_no_description">Missing note description!</string>
    <string name="note_description_length_exceeded">Description is too long</string>
    <string name="note_invalid_format">Illegal note description format</string>
    <string name="schedule_unmodifiable_order">Lesson order is immutable!</string>
    <string name="schedule_out_of_range">Out of schedule range!</string>
    <string name="read_only_id">Table ID is immutable!</string>
    <string name="fill_type_name">Each lesson type must be unique!</string>
    <string name="lesson_type_update_error">Renaming of the lesson was canceled due to illegal name format!</string>
    <string name="lesson_type_insert_error">Inserting of the lesson was canceled due to illegal name format!</string>
    <string name="lesson_type_exists">Lesson type already exists</string>
    <string name="lesson_type_unknown_error">Unexpected error occurred while inserting item!</string>
    <string name="lesson_unmodifiable">Schedule can\'t be modified yet!</string>
    <string name="subject_required">There must be at least one subject!</string>
    <string name="lesson_type_required">There must be at least one lesson type!  (e.g. presentation, course, practise, etc.)</string>
    <string name="lesson_editor_accessible">Schedule is now modifiable!</string>
    <string name="busy_day_error">Lesson is too long!</string>
    <string name="schedule_unset">No lessons!</string>
    <string name="edits">Edits</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="abort">Abort</string>
    <string name="confirm">Confirm</string>
    <string name="add">Add</string>
    <string name="to_empty">Empty</string>
    <string name="edit_work_week">Change work week</string>
    <string name="lesson_schedule">Schedule</string>
    <string name="subjects">Subjects</string>
    <string name="notes">Notes</string>
    <string name="style">Style</string>
    <string name="preview">Preview</string>
    <string name="work_week">Work week</string>
    <string name="day">Day</string>
    <string name="time">Time</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>
    <string name="regularity">Regularity</string>
    <string name="every_week">Every week</string>
    <string name="even_week">Even week</string>
    <string name="odd_week">Odd week</string>
    <string name="subject">Subject</string>
    <string name="no_subjects">No subjects!</string>
    <string name="subject_abb">Abbreviation</string>
    <string name="subject_name">Full name</string>
    <string name="minute_abbreviation">min</string>
    <string name="schedule_start">Schedule start</string>
    <string name="edit_schedule_start">Edit schedule start</string>
    <string name="break_after_lesson">Break</string>
    <string name="time_schedule">Lessons</string>
    <string name="lesson_types">Lesson types</string>
    <string name="lesson_type">Lesson type</string>
    <string name="new_lesson">New lesson</string>
    <string name="lesson">Lesson</string>
    <string name="free">Free</string>
    <string name="room">Room</string>
    <string name="remove_bg_image">Remove background image</string>
    <string name="set_bg_image">Set background image</string>
    <string name="set_as_wallpaper">Set as wallpaper</string>
    <string name="hue">Hue</string>
    <string name="saturation">Saturation</string>
    <string name="luminance">Luminance</string>
    <string name="alpha">Alpha</string>
    <string name="fill">Fill</string>
    <string name="fit">Fit</string>
    <string name="cover">Cover</string>
    <string name="previous_color">Previous color</string>
    <string name="next_color">Next color</string>
    <string name="bg_image">Background image</string>
    <string name="header">Table head</string>
    <string name="background">Background</string>
    <string name="wallpaper_set_success">Wallpaper has been changed!</string>
    <string name="permission_denied">Permission denied!</string>
    <string name="no_image_present">No image available!</string>
    <string name="error_loading_image">Loading of the image failed due to denial of the storage access permission!</string>
    <string name="no_notes">No notes</string>
    <string name="change_subject">Change subject</string>
    <string name="set_date">Set date</string>
    <string name="unset_date">Unset date</string>
    <string name="save">Save</string>
    <string name="all">All</string>
    <string name="timeless">Timeless</string>
    <string name="late">Late</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="in_week">This week</string>
    <string name="outcast_note">The note is no longer part of this category!</string>
    <string name="date">Date</string>
    <string name="time_out">Time out!</string>
    <string name="previous_subject">Previous subject</string>
    <string name="next_subject">Next subject</string>
    <string name="clear_all">clear_all</string>
    <string name="design">Design</string>
    <string name="reminders">Reminders</string>
    <string name="alarms">Alarm clocks</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="alarm_advance">Alarm advance</string>
    <string name="days">Days</string>
    <string name="semester">Semester</string>
    <string name="week_count">Week count</string>
    <string name="week">Week</string>
    <string name="semester_over">Semester over</string>
    <string name="semester_never_started">Future semester</string>
    <string name="garbage_data_removed">Late notes and useless subjects will be removed!</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="dual_week_schedule">Dual week schedule</string>
    <string name="start_lessons_from_0">Lesson order from 0</string>
    <string name="start_lessons_from_1">Lesson order from 1</string>
    <string name="show_start_time_of_lessons">Show lesson start</string>
    <string name="lesson_labeling">Lesson labeling</string>
    <string name="date_time_format">Date and time format</string>
    <string name="choose_date">Choose date</string>
    <string name="stroke">Stroke</string>
    <string name="dot">Dot</string>
    <string name="dash">Dash</string>
    <string name="space">Space</string>
    <string name="time_format_12">12 hours</string>
    <string name="time_format_24">24 hours</string>
    <string name="schedule_emptied">Schedule emptied</string>
    <string name="time_cleared">Time cleared</string>
    <string name="lesson_removed">Lesson removed</string>
    <string name="lesson_updated">Lesson changed</string>
    <string name="lesson_inserted">Lesson inserted</string>
    <string name="order_of_date_month_year">Order of date, month and year</string>
    <string name="separator">Separator</string>
    <string name="time_format">Time format</string>
    <string name="too_many_lessons">Maximum lesson count exceeded!</string>
    <string name="set_alarms_by_schedule">Set alarms by schedule</string>
    <string name="alarm_advance_hint">Set time advance before lesson start!</string>
    <string name="alarm_clock">Alarm clock</string>
    <string name="stop">Stop</string>
    <string name="snooze">Snooze</string>
    <string name="alarm_tone">Alarm clock tone</string>
    <string name="default_">Default</string>
    <string name="set_default_alarm_tone">Set default alarm tone</string>
    <string name="alarm_snooze">Alarm Clock snooze</string>
    <string name="lesson_edit_aborted">Lesson deselected</string>
    <string name="timetable">Timetable</string>
    <string name="invalid_widget">Invalid widget</string>
    <string name="play_ringtone">Play tone</string>
    <string name="settings">Settings</string>
    <string name="audio_file_removed_or_moved">Audio file has been moved or removed!</string>
    <string name="voice_err_unavailable">Shake sensor unavailable</string>
    <string name="cmd_unique_time_schedule">Lessons</string>
    <string name="cmd_unique_lesson_types">Lesson types</string>
    <string name="cmd_unique_lesson_schedule">Schedule</string>
    <string name="cmd_unique_design">Design</string>
    <string name="cmd_unique_subjects">Subjects</string>
    <string name="cmd_unique_note_category">[Categories]</string>
    <string name="cmd_unique_notes">Notes</string>
    <string name="cmd_unique_reminders">Reminders</string>
    <string name="cmd_unique_adapt_alarms_to_schedule">Automatic alarm</string>
    <string name="cmd_unique_alarm_clock">Alarm clocks</string>
    <string name="cmd_unique_semester">Semester</string>
    <string name="cmd_unique_settings">Settings</string>
    <string name="cmd_unique_alarm_tone">Alarm tone</string>
    <string name="cmd_unique_clean_up">Clean up</string>
    <string name="cmd_desc_lesson_types">To view the lesson types.</string>
    <string name="cmd_desc_lesson_schedule">To view the timetable</string>
    <string name="cmd_desc_design">To set design.</string>
    <string name="cmd_desc_subjects">To view subjects</string>
    <string name="cmd_desc_note_category">To view notes of mentioned category</string>
    <string name="cmd_desc_reminders">To customize notification settings.</string>
    <string name="cmd_desc_adapt_alarms_by_schedule">To adapt all alarm clocks to the currently set schedule with advance.</string>
    <string name="cmd_desc_alarm_clocks">To view alarm clocks.</string>
    <string name="cmd_desc_semester">To show semester settings.</string>
    <string name="cmd_desc_settings">Settings</string>
    <string name="cmd_desc_alarm_tone">To set the alarm tone.</string>
    <string name="cmd_desc_clean_up">Late notes and unused subjects (not shown on currently set schedule and no notes attached to it) will be removed.</string>
    <string name="press_to_command">Press to command</string>
    <string name="voice_err_server">Offline dictionary unavailable. Please, connect to the internet network!</string>
    <string name="voice_err_network">Check your internet connection please!</string>
    <string name="voice_err_busy">Recording</string>
    <string name="voice_err_no_match">I don\'t understand!</string>
    <string name="voice_err_client">Client side error. Please check your device settings.</string>
    <string name="voice_err_audio">Sound error</string>
    <string name="voice_not_captured">No voice detected</string>
    <string name="unspecified_command">Unspecified command</string>
    <string name="obsolete_data_gone">Excessive data removed</string>
    <string name="alarm_clocks_set">Alarm clocks have been set</string>
    <string name="voice_instructions">Voice instructions</string>
    <string name="give_order">Give an instruction</string>
    <string name="wait_please">Processing</string>
    <string name="collapse">Collapse</string>
    <string name="info">Info</string>
    <string name="microphone">Microphone</string>
    <string name="music_stopped">Music stopped</string>
    <string name="enable_voice_commands">Allow voice instructions</string>
    <string name="lessons_required">There are no lessons!</string>
</resources>