<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEDEDE"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".activities.Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Switch
            android:id="@+id/dualWeekEnabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="#77FFFFFF"
            android:gravity="center|start"
            android:minHeight="40dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/dual_week_schedule" />

        <Switch
            android:id="@+id/voice_cmd_enabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="#77FFFFFF"
            android:gravity="center|start"
            android:minHeight="40dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/enable_voice_commands" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:background="#77FFFFFF"
            android:gravity="center"
            android:minHeight="40dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/work_week" />

            <com.moriak.schednote.views.OptionStepper
                android:id="@+id/workweek_choice"
                style="@style/optionStepper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:background="#77FFFFFF"
            android:gravity="center"
            android:minHeight="40dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/lesson_labeling" />

            <com.moriak.schednote.views.OptionStepper
                android:id="@+id/les_label_choice"
                style="@style/optionStepper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/alarm_snooze"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:background="#77FFFFFF"
            android:gravity="center"
            android:minHeight="40dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp">

            <TextView
                android:id="@+id/snooze_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="5"
                android:text="@string/alarm_snooze" />

            <com.moriak.schednote.views.OptionStepper
                android:id="@+id/snooze_choice"
                style="@style/optionStepper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/date_time_format"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:background="#77FFFFFF"
            android:gravity="center"
            android:minHeight="40dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/date_time_format" />

            <com.moriak.schednote.views.OptionStepper
                android:id="@+id/dtf_choice"
                style="@style/optionStepper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/alarm_tone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="#77FFFFFF"
            android:gravity="center"
            android:minHeight="40dp"
            android:paddingStart="4dp"
            android:paddingTop="8dp"
            android:paddingEnd="4dp"
            android:paddingBottom="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="2"
                android:text="@string/alarm_tone" />

            <TextView
                android:id="@+id/alarm_tune_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:drawableStart="@drawable/ic_audiotrack_black_24dp"
                android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:ellipsize="end"
                android:gravity="center|start"
                android:lines="1"
                android:text="@string/default_" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>